<resources>
    <string name="app_name">submission1-bajp-dicoding</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="detail_bg">Detail Background</string>
    <string name="detal_img">Detail Image</string>
    <string name="title">Title</string>
    <string name="movie">Movie</string>
    <string name="tvshow">TV Show</string>
    <string name="release">Release Date</string>
    <string name="overview_description">Overview Description</string>
    <string name="overview">Overview</string>
    <string name="genre">Genre</string>

</resources>